# fores

./: .env  .gitignore  Cargo.toml
migrations/2018-11-18-093550_prototype/: down.sql  up.sql
migrations/2018-12-05-230821_create_file_owners/: down.sql  up.sql
migrations/2018-12-06-130053_add_deletion_cascading/: down.sql  up.sql
migrations/2018-12-09-003943_create_file_contents/: down.sql  up.sql
src/: auth.rs  error.rs  lib.rs  main.rs  schema.rs  store.rs  svc.rs  web.rs
src/app/: error.rs  mod.rs
src/app/files/: add_dir.rs  delete.rs  find_dir.rs  list.rs  mod.rs  replace_dir.rs
src/db/: files.rs  mod.rs  users.rs
src/mdl/: enum_macro.rs  file.rs  mod.rs  user.rs
src/svc/: files.rs  mod.rs  tree.rs
src/svc/files/: add_dir.rs  add_file.rs  all_files.rs  create.rs  delete.rs  get.rs  list.rs  make_dir.rs  mod.rs  moves.rs  store.rs
src/svc/tree/: find_dir.rs  for_each.rs  modify_dir.rs
src/web/: error.rs  files.rs  mod.rs
