[package]
authors = ["ryym <ryym.64@gmail.com>"]
name = "fores"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "0.7.13"
dotenv = "0.13.0"
env_logger = "0.5.13"
failure = "0.1.3"
log = "0.4.6"
r2d2 = "0.8.2"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"

[dependencies.chrono]
features = ["serde"]
version = "0.4.6"

[dependencies.diesel]
features = [
    "chrono",
    "postgres",
    "serde_json",
    "r2d2",
]
version = "1.3.3"
